[package]
name = "rustyterra"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.60"
web-sys = { version = "0.3.72", features = ['Window', 'Headers', 'Request', 'RequestInit', 'RequestMode', "RequestCredentials", 'Response', 'Window'] }
wasm-bindgen-futures = "0.4.45"

console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"