[package]
name = "rustyterra-stub"
version = "0.1.0"
authors = ["sh1kxrv"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"

console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s"
